avoid layout shift when edit time changes

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -135,6 +135,7 @@ $padding: 4px;
 
     padding: 0 8px;
     height: 100%;
+    min-width: 150px;
 
     white-space: nowrap;
     overflow: hidden;
